Added search results handler added display for search results added fragment for display of search results

--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -38,6 +38,21 @@
 
     <!-- TODO #2 - Loop over jobs map to display all job fields -->
 
+    <h1 th:text="${#strings.capitalizeWords(title)}"></h1>
+
+
+    <div th:replace="fragments :: display-job-listings"></div>
+
+        <!--<th:block th:each="job : ${jobs}">-->
+            <!--<table class="job-listing">-->
+
+                <!--<tr th:each="jobEntry : ${job}">-->
+                    <!--<td><span th:text="${jobEntry.key}"></span> </td><td> <span th:text="${jobEntry.value}"></span></td>-->
+                <!--</tr>-->
+
+            <!--</table>-->
+        <!--</th:block>-->
+ <!---->
 </div>
 
 </body>
