--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -27,5 +27,20 @@
         </div>
     </div>
 
+    <div th:fragment="display-job-listings" >
+
+
+        <th:block th:each="job : ${jobs}">
+            <table class="job-listing">
+
+                <tr th:each="jobEntry : ${job}">
+                    <td><span th:text="${jobEntry.key}"></span> </td><td> <span th:text="${jobEntry.value}"></span></td>
+                </tr>
+
+            </table>
+        </th:block>
+
+
+    </div>
 </body>
 </html>
