--- a/src/main/resources/templates/list-jobs.html
+++ b/src/main/resources/templates/list-jobs.html
@@ -10,6 +10,9 @@
 
     <h1 th:text="${#strings.capitalizeWords(title)}"></h1>
 
+
+    <div th:replace="fragments :: display-job-listings"></div>
+
     <!-- TODO #3 - Use the same list display from search.html -->
 
 </div>
